--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="organization">
             <h1 class="organization__title">Информация о юридических лицах</h1>
 
-            <form class="organization__form" action="">
+            <form class="organization__form">
                 <ul class="organization__list">
                     <li class="organization__item">
                         <div class="organization__search">
