--- a/index.html
+++ b/index.html
@@ -21,19 +21,21 @@
                     <li class="organization__item">
                         <div class="organization__search">
                             <label class="organization__label-search" for="search">Компания или ИП</label>
-                            <input
-                                    autofocus
-                                    type="search"
-                                    placeholder="Введите название, ИНН, ОГРН или адрес организации"
-                                    id="search"
-                                    class="organization__input"
-                            >
-                            <div class="variant__list hidden">
-                                <div class="variant__info">
-                                    <p class="variant__hint">Выберите вариант или продолжите ввод</p>
-                                    <a href="https://dadata.ru/suggestions/?utm_source=dadata&utm_medium=module&utm_campaign=suggestions-jquery">
-                                        <img class="variant__img" src="https://dadata.ru/static/i/dadata-logo.svg" alt="DaData.ru">
-                                    </a>
+                            <div id="wrap">
+                                <input
+                                        autofocus
+                                        type="search"
+                                        placeholder="Введите название, ИНН, ОГРН или адрес организации"
+                                        id="search"
+                                        class="organization__input"
+                                >
+                                <div class="variant__list hidden">
+                                    <div class="variant__info">
+                                        <p class="variant__hint">Выберите вариант или продолжите ввод</p>
+                                        <a href="https://dadata.ru/suggestions/?utm_source=dadata&utm_medium=module&utm_campaign=suggestions-jquery">
+                                            <img class="variant__img" src="https://dadata.ru/static/i/dadata-logo.svg" alt="DaData.ru">
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
